--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация</title>
-    <link rel="stylesheet" href="./Css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <style type="text/tailwindcss">
     </style>
 </head>
@@ -23,7 +23,7 @@
             <a class="text-center text-[25px] text-[#3F8C8E]  hover:scale-[1.2] duration-300"  href="./index.html">Войти</a>
         </form>
     </div>
-    <script src="./Js/paswords.js"></script>
+    <script src="./Js/password.js"></script>
     <script src="./Js/register.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </body>
