--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./Css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <style type="text/tailwindcss">
     </style>
 </head>
-<body>
+<body class="body">
     <div class="w-[621px] mx-auto bg-white rounded-[25px] text-center pt-[35px] pb-[46px]">
         <img class="mx-auto" src="./images/img.svg" alt="logo" width="421" height="72">
         <p class="font-bold  text-[25px] text-center w-[547px ] mt-[17px] mb-[40px] text-[#A3A3A3]">Введите имя пользователя и пароль, чтобы получить доступ к системе.</p>
@@ -21,7 +21,7 @@
             <a class="text-center text-[25px] text-[#3F8C8E]  hover:scale-[1.2] duration-300"  href="./register.html">Регистрация</a>
         </form>
     </div>
-    <script src="./Js/paswords.js"></script>
+    <script src="./Js/password.js"></script>
     <script src="./Js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </body>
