--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
-    <style type="text/tailwindcss">
-    </style>
+    <style type="text/tailwindcss"></style>
+    <title>Войти</title>
 </head>
-<body class="body">
-    <div class="w-[621px] mx-auto bg-white rounded-[25px] text-center pt-[35px] pb-[46px]">
-        <img class="mx-auto" src="./images/img.svg" alt="logo" width="421" height="72">
-        <p class="font-bold  text-[25px] text-center w-[547px ] mt-[17px] mb-[40px] text-[#A3A3A3]">Введите имя пользователя и пароль, чтобы получить доступ к системе.</p>
-        <form class="flex flex-col items-center gap-[16px] login-form">
-            <input  autocomplete="off" class="font-bold text-[25px] w-[359px] pt-[15px] pb-[10px] text-[#A3A3A3] rounded-[17px] text-center border-[1px] border-[#CBCBCB]  placeholder:text-[25px] placeholder:text-[#A3A3A3] focus:outline-none"  required  type="text" name="username" placeholder="Имя пользователя" >
-            <input autocomplete="off" class="font-bold text-[25px] w-[359px] pt-[15px] pb-[10px] text-[#A3A3A3] rounded-[17px] text-center border-[1px] border-[#CBCBCB] placeholder:text-[25px] placeholder:text-[#A3A3A3] focus:outline-none "  required  name="password" type="password" placeholder="Пароль">
-            <button class="w-[237px] font-bold text-[25px] text-white bg-[#3F8C8E] py-[8px] flex items-center justify-center rounded-[10px] hover:opacity-[70%] duration-300 active:scale-90" type="submit">
-                Войти
-            </button>
-            <a class="text-center text-[25px] text-[#3F8C8E]  hover:scale-[1.2] duration-300"  href="./register.html">Регистрация</a>
+<body class="login-body">
+    
+    <div class="p-[35px] bg-white text-center rounded-[25px] w-[621px] mx-auto">
+        <img class="mb-[17px] mx-auto" src="./images/img.svg" alt="Site Logo" width="421" height="71">
+        <p class="text-[22px] text-[#A3A3A3] font-bold mb-[76px]">Введите имя пользователя и пароль, чтобы получить доступ к системе.</p>
+        <form autocomplete="off" class="login-form flex flex-col gap-[16px] items-center">
+            <input required class="username-input w-[359px] text-[25px] font-bold  placeholder:text-[25px] placeholder:font-bold py-[15px] outline-none border-[1px] border-[#CBCBCB] rounded-[17px] text-center" type="text" placeholder="Имя пользователя" name="username">
+            <input required class="password-input w-[359px] text-[25px] font-bold  placeholder:text-[25px] placeholder:font-bold py-[15px] outline-none border-[1px] border-[#CBCBCB] rounded-[17px] text-center" type="password" placeholder="Пароль" name="password">
+            <button class="w-[237px] bg-[#3F8C8E] text-white font-bold text-[23px] cursor-pointer hover:opacity-[80%] border-[1px] border-transparent duration-300 hover:border-[#3F8C8E] pt-[9px] pb-[7px] rounded-[10px]" type="submit">Войти</button>
+            <a class="text-[#3F8C8E] text-[20px] duration-300 hover:scale-[1.1]" href="./register.html">Регистрация</a>
         </form>
     </div>
-    <script src="./Js/password.js"></script>
-    <script src="./Js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+     <script src="./Js/password.js"></script>
+    <script src="./Js/login.js"></script>
 </body>
 </html>
