--- a/register.html
+++ b/register.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
     <link rel="stylesheet" href="./css/main.css">
-    <style type="text/tailwindcss">
-    </style>
+    <style type="text/tailwindcss"></style>
+    <title>Регистрация</title>
 </head>
-<body>
-    <div class="w-[621px] mx-auto bg-white rounded-[25px] text-center pt-[35px] pb-[46px]">
-        <img class="mx-auto" src="./images/img.svg" alt="logo" width="421" height="72">
-        <p class="font-bold  text-[25px] text-center mx-auto text-center w-[547px] mt-[17px] mb-[40px] text-[#A3A3A3]">Введите новое имя и пароль для входа в систему.</p>
-        <form class="flex flex-col items-center gap-[16px] registr-form">
-            <input  autocomplete="off" class="font-bold text-[25px] w-[359px] pt-[15px] pb-[10px] text-[#A3A3A3] rounded-[17px] text-center border-[1px] border-[#CBCBCB]  placeholder:text-[25px] placeholder:text-[#A3A3A3] focus:outline-none"  required  type="text" name="username" placeholder="Новое имя" >
-            <div class="flex relative">
-                <input autocomplete="off" class="font-bold text-[25px] w-[359px] pt-[15px] pb-[10px] text-[#A3A3A3] rounded-[17px] text-center border-[1px] border-[#CBCBCB] placeholder:text-[25px] placeholder:text-[#A3A3A3] focus:outline-none parol"   required  name="password" type="password" placeholder=" Новое  Пароль">
-            </div>
-            <button class="w-[237px] font-bold text-[25px] text-white bg-[#3F8C8E] py-[8px] flex items-center justify-center  rounded-[10px] hover:opacity-[70%] duration-300 active:scale-90" type="submit">
-               Регистрация
-            </button>
-            <a class="text-center text-[25px] text-[#3F8C8E]  hover:scale-[1.2] duration-300"  href="./index.html">Войти</a>
+<body class="login-body">
+    
+    <div class="p-[35px] bg-white text-center rounded-[25px] w-[621px] mx-auto">
+        <img class="mb-[17px] mx-auto" src="./images/img.svg" alt="Site Logo" width="421" height="71">
+        <p class="text-[22px] text-[#A3A3A3] font-bold mb-[40px]">Введите новое имя пользователя и пароль для входа в систему.</p>
+        <form autocomplete="off" class="register-form flex flex-col gap-[16px] items-center">
+            <input required class="username-input w-[359px] text-[25px] font-bold  placeholder:text-[25px] placeholder:font-bold py-[15px] outline-none border-[1px] border-[#CBCBCB] rounded-[17px] text-center" type="text" placeholder="Новый Имя" name="username">
+            <input required class="password-input w-[359px] text-[25px] font-bold  placeholder:text-[25px] placeholder:font-bold py-[15px] outline-none border-[1px] border-[#CBCBCB] rounded-[17px] text-center" type="password" placeholder="Новый Пароль" name="password">
+            <button class="w-[237px] bg-[#3F8C8E] text-white font-bold text-[23px] cursor-pointer hover:opacity-[80%] border-[1px] border-transparent duration-300 hover:border-[#3F8C8E] pt-[9px] pb-[7px] rounded-[10px]" type="submit">Регистрация</button>
+            <a class="text-[#3F8C8E] text-[20px] duration-300 hover:scale-[1.1]" href="./index.html">Войти</a>
         </form>
     </div>
-    <script src="./Js/password.js"></script>
-    <script src="./Js/register.js"></script>
+
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+     <script src="./Js/password.js"></script>
+     <script src="./Js/register.js"></script>
 </body>
 </html>
