--- a/ui.html
+++ b/ui.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,67 @@
     <style type="text/tailwindcss"></style>
     <title>Intex</title>
 </head>
+
 <body>
-    
+    <header class="bg-[#009398]">
+        <div class="containers">
+            <div class="flex justify-between py-[22px]">
+                <a href="/">
+                    <img src="./images/site-logo.svg" alt="Logo" width="300" height="35">
+                </a>
+                <div class="flex gap-[50px] py-[7px]">
+                    <a class="font-semibold text-[#FFFFFF] text-[20px]" href="/">Каркасные бассейны</a>
+                    <a class="font-semibold text-[#FFFFFF] text-[20px]" href="/">Надувные бассейны</a>
+                </div>
+                    <div class="flex gap-[30px]">
+                        <a class="font-semibold text-[#FFFFFF] text-[18px] py-[7px]" href="tel:+998999110204">(99) 911 02 04</a>
+                        <div class="flex">
+                            <a href="/">
+                                <img src="./images/icon-img-1.svg" alt="telegram" width="50" height="50">
+                            </a>
+                            <a href="/">
+                                <img src="./images/icon-img-2.svg" alt="instagram" width="50" height="50">
+                            </a>
+                            <a href="/">
+                                <img src="./images/icon-img-3.svg" alt="language" width="50" height="50">
+                            </a>
+                            </div>
+                    </div>
+            </div>
+        </div>
+    </header>
     <main>
+        <section class="hero-section">
+        </section>
+        <section>
+                <h2 class="bg-[#009398] font-semibold text-[50px] text-center text-[#FFFFFF]">Сезонная распродажа!</h2>
+                <div class="flex justify-center py-[97px] gap-[44px]">
+                   <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
+                    <strong class="font-semibold text-[65px] pl-[13px] text-[#FFFFFF]">1</strong>
+                    <div class="flex flex-col pl-[19px] pt-[14px] pb-[14px] pr-[10px]">
+                        <h3 class="font-semibold text-[24px] text-[#FFFFFF]">Бесплатная доставка бассейна
+                        </h3>
+                        <p class="font-normal text-[10px] text-[#FFFFFF]">Мы ценим наших клиентов, можете быть уверены в качестве нашего сервиса!</p>
+                    </div>
+                   </div>
+                    <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
+                    <strong class="font-semibold text-[65px] pl-[13px] text-[#FFFFFF]">2</strong>
+                    <div class="flex flex-col pl-[19px] pt-[14px] pb-[14px] pr-[10px]">
+                        <h3 class="font-semibold text-[24px] text-[#FFFFFF]">Специальная химия в подарок
+                        </h3>
+                        <p class="font-normal text-[10px] text-[#FFFFFF] w-[200px]">Специальная очищающая химия для бассейна - бесплатно</p>
+                    </div>
+                   </div>
+                    <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
+                    <strong class="font-semibold text-[65px] pl-[13px] text-[#FFFFFF]">3</strong>
+                    <div class="flex flex-col pl-[19px] pt-[14px] pb-[14px] pr-[10px]">
+                        <h3 class="font-semibold text-[24px] text-[#FFFFFF]">Гарантия качества
+                        </h3>
+                        <p class="font-normal text-[10px] text-[#FFFFFF] pt-[25px] w-[200px]">Вся продукция INTEX является оригинальнойp>
+                    </div>
+                   </div>
+                </div>
+        </section>
         <section>
             <div class="py-[22px] bg-[#009398]">
                 <h2 class="text-white text-[50px] font-bold text-center">Каркасные бассейны</h2>
@@ -28,14 +87,16 @@
                 </ul>
             </div>
         </section>
-    </main> 
-    
-    <div id="wrapper" class="modal-wrapper scale-0 duration-300 flex items-center justify-center fixed top-0 bottom-0 left-0 right-0 bg-[#00000097] backdrop-blur-[5px]">
+    </main>
+
+    <div id="wrapper"
+        class="modal-wrapper scale-0 duration-300 flex items-center justify-center fixed top-0 bottom-0 left-0 right-0 bg-[#00000097] backdrop-blur-[5px]">
         <div class="modal-inner p-[20px] bg-white rounded-md"> </div>
     </div>
 
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-     <script src="./Js/password.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="./Js/password.js"></script>
     <script src="./Js/ui.js"></script>
 </body>
+
 </html>
