--- a/ui.html
+++ b/ui.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <style type="text/tailwindcss"></style>
     <title>Intex</title>
 </head>
-
 <body>
     <header class="bg-[#009398]">
         <div class="containers">
@@ -20,20 +18,21 @@
                     <a class="font-semibold text-[#FFFFFF] text-[20px]" href="/">Каркасные бассейны</a>
                     <a class="font-semibold text-[#FFFFFF] text-[20px]" href="/">Надувные бассейны</a>
                 </div>
-                    <div class="flex gap-[30px]">
-                        <a class="font-semibold text-[#FFFFFF] text-[18px] py-[7px]" href="tel:+998999110204">(99) 911 02 04</a>
-                        <div class="flex">
-                            <a href="/">
-                                <img src="./images/icon-img-1.svg" alt="telegram" width="50" height="50">
-                            </a>
-                            <a href="/">
-                                <img src="./images/icon-img-2.svg" alt="instagram" width="50" height="50">
-                            </a>
-                            <a href="/">
-                                <img src="./images/icon-img-3.svg" alt="language" width="50" height="50">
-                            </a>
-                            </div>
+                <div class="flex gap-[30px]">
+                    <a class="font-semibold text-[#FFFFFF] text-[18px] py-[7px]" href="tel:+998999110204">(99) 911 02
+                        04</a>
+                    <div class="flex">
+                        <a href="/">
+                            <img src="./images/icon-img-1.svg" alt="telegram" width="50" height="50">
+                        </a>
+                        <a href="/">
+                            <img src="./images/icon-img-2.svg" alt="instagram" width="50" height="50">
+                        </a>
+                        <a href="/">
+                            <img src="./images/icon-img-3.svg" alt="language" width="50" height="50">
+                        </a>
                     </div>
+                </div>
             </div>
         </div>
     </header>
@@ -41,33 +40,36 @@
         <section class="hero-section">
         </section>
         <section>
-                <h2 class="bg-[#009398] font-semibold text-[50px] text-center text-[#FFFFFF]">Сезонная распродажа!</h2>
-                <div class="flex justify-center py-[97px] gap-[44px]">
-                   <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
+            <h2 class="bg-[#009398] font-semibold text-[50px] text-center text-[#FFFFFF]">Сезонная распродажа!</h2>
+            <div class="flex justify-center py-[97px] gap-[44px]">
+                <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
                     <strong class="font-semibold text-[65px] pl-[13px] text-[#FFFFFF]">1</strong>
                     <div class="flex flex-col pl-[19px] pt-[14px] pb-[14px] pr-[10px]">
                         <h3 class="font-semibold text-[24px] text-[#FFFFFF]">Бесплатная доставка бассейна
                         </h3>
-                        <p class="font-normal text-[10px] text-[#FFFFFF]">Мы ценим наших клиентов, можете быть уверены в качестве нашего сервиса!</p>
+                        <p class="font-normal text-[10px] text-[#FFFFFF]">Мы ценим наших клиентов, можете быть уверены в
+                            качестве нашего сервиса!</p>
                     </div>
-                   </div>
-                    <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
+                </div>
+                <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
                     <strong class="font-semibold text-[65px] pl-[13px] text-[#FFFFFF]">2</strong>
                     <div class="flex flex-col pl-[19px] pt-[14px] pb-[14px] pr-[10px]">
                         <h3 class="font-semibold text-[24px] text-[#FFFFFF]">Специальная химия в подарок
                         </h3>
-                        <p class="font-normal text-[10px] text-[#FFFFFF] w-[200px]">Специальная очищающая химия для бассейна - бесплатно</p>
+                        <p class="font-normal text-[10px] text-[#FFFFFF] w-[200px]">Специальная очищающая химия для
+                            бассейна - бесплатно</p>
                     </div>
-                   </div>
-                    <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
+                </div>
+                <div class="w-[340px] bg-[#009398] rounded-tr-[40px] rounded-bl-[40px] flex">
                     <strong class="font-semibold text-[65px] pl-[13px] text-[#FFFFFF]">3</strong>
                     <div class="flex flex-col pl-[19px] pt-[14px] pb-[14px] pr-[10px]">
                         <h3 class="font-semibold text-[24px] text-[#FFFFFF]">Гарантия качества
                         </h3>
-                        <p class="font-normal text-[10px] text-[#FFFFFF] pt-[25px] w-[200px]">Вся продукция INTEX является оригинальнойp>
+                        <p class="font-normal text-[10px] text-[#FFFFFF] pt-[25px] w-[200px]">Вся продукция INTEX
+                            является оригинальнойp>
                     </div>
-                   </div>
                 </div>
+            </div>
         </section>
         <section>
             <div class="py-[22px] bg-[#009398]">
@@ -87,16 +89,98 @@
                 </ul>
             </div>
         </section>
+        <section class="bg-[#009398]">
+            <div class="text-center">
+                <h2 class="pt-[20px] font-semibold text-[50px] text-[#FFFFFF]">Бесплатная доставка
+                </h2>
+                <p class="text-[23px] containers pt-[35px] text-[#FFFFFF]">Бесплатная доставка осуществляется в пределах
+                    города Ташкент (за пределами города доставка оплачивается отдельно)
+                </p>
+                <button
+                    class="text-[#000000]  rounded-[10px] text-[20px] text-center py-[5px] w-[250px] mt-[50px] mb-[39px] font-semibold bg-[#FFE600]"
+                    type="submit">Оформить заказ</button>
+            </div>
+        </section>
+        <section class="pt-[89px]">
+            <h2 class="bg-[#00939817] text-center font-semibold text-[50px] text-[#009398]">Ценности наших клиентов</h2>
+            <div class="flex containers gap-[20px] pb-[50px] justify-between">
+                <div class="flex gap-[19px] mt-[89px]">
+                    <img src="./images/section-img-1.svg" alt="img" width="108" height="105">
+                    <div class="flex flex-col w-[200px] pt-[15px] ">
+                        <h3 class="text-[#000000] text-[40px] font-semibold">Опыт
+                        </h3>
+                        <p class="text-[#000000] text-[12px]">Профессионализм наших сотрудников</p>
+                    </div>
+                </div>
+                <div class="flex gap-[19px] mt-[89px]">
+                    <img src="./images/section-img-2.svg" alt="img" width="124" height="124">
+                    <div class="flex flex-col w-[180px] pt-[15px] ">
+                        <h3 class="text-[#000000] text-[40px] font-semibold">Доставка
+                        </h3>
+                        <p class="text-[#000000] text-[12px]">Бесплатная доставка по городу
+                        </p>
+                    </div>
+                </div>
+                <div class="flex gap-[15px] mt-[89px]">
+                    <img src="./images/section-img-3.svg" alt="img" width="113" height="111">
+                    <div class="flex flex-col w-[180px] pt-[15px] ">
+                        <h3 class="text-[#000000] text-[40px] font-semibold">Качество
+                        </h3>
+                        <p class="text-[#000000] text-[12px]">Прочные, качественные бассейны</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
+    <footer>
+        <h2 class="bg-[#00939817] text-center text-[50px] text-[#009398]">Бассейны от intex в Ташкенте
+        </h2>
+        <div class="flex gap-[70px] pt-[50px] pb-[300px] containers justify-between">
+            <p class="text-[#000000] text-[25px] w-[503px]">Бассейны от intex - доступная по цене, качественная,
+                надежная и экологически чистая продукция, которая предназначена для приятного отдыха всей семьи. Бассейн
+                можно установить совершенно на любом участке и активно пользоваться им в летний период. Бассейн подарит
+                вам яркие эмоции и спасет от жары в знойные летние дни.
+            </p>
+            <div>
+                <p class="text-[#000000] w-[535px] text-[25px]">Бассейны от intex отличаются обширным перечнем
+                    преимуществ, из которых можно выделить самые важные:
+                </p>
+                <div class="flex flex-col pt-[20px] gap-[5px]">
+                    <div class="flex gap-[5px]">
+                        <img src="./images/check-mark.svg" alt="check" width="25" height="25">
+                        <p>Прочность
+                        </p>
+                    </div>
+                    <div class="flex gap-[5px]">
+                        <img src="./images/check-mark.svg" alt="check" width="25" height="25">
+                        <p>Простота установки
+                        </p>
+                    </div>
+                    <div class="flex gap-[5px]">
+                        <img src="./images/check-mark.svg" alt="check" width="25" height="25">
+                        <p>Красивые и ярки цвета
+                        </p>
+                    </div>
+                    <div class="flex gap-[5px]">
+                        <img src="./images/check-mark.svg" alt="check" width="25" height="25">
+                        <p>Стильный дизайн
+                        </p>
+                    </div>
+                    <div class="flex gap-[5px]">
+                        <img src="./images/check-mark.svg" alt="check" width="25" height="25">
+                        <p>Высокое качество
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <div id="wrapper"
         class="modal-wrapper scale-0 duration-300 flex items-center justify-center fixed top-0 bottom-0 left-0 right-0 bg-[#00000097] backdrop-blur-[5px]">
         <div class="modal-inner p-[20px] bg-white rounded-md"> </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="./Js/password.js"></script>
     <script src="./Js/ui.js"></script>
 </body>
-
 </html>
